--- a/posts/build.gradle
+++ b/posts/build.gradle
@@ -35,6 +35,7 @@ android {
 dependencies {
     implementation project(':core')
 
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     kapt deps.android.roomCompiler
     kapt deps.google.daggerProcessor
 
