--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ buildscript {
             'androidPlugin'    : '3.1.0-alpha08',
             'kotlin'           : '1.2.20',
             'archComp'         : '1.0.0',
-            'room'         : '1.0.0',
-            'roomRx'         : '1.0.0',
+            'room'             : '1.0.0',
+            'roomRx'           : '1.0.0',
             'gms'              : '3.1.0',
             'dagger'           : '2.12',
             'retrofit'         : '2.3.0',
@@ -22,42 +22,44 @@ buildscript {
             'rxAndroid'        : '2.0.1',
             'stetho'           : '1.5.0',
             'junit'            : '4.12',
-            'testRunner'       : '1.0.1',
-            'espressoCore'     : '3.0.1',
+            'atsl'             : '1.0.1',
+            'mockitoKotlin'    : '1.5.0',
+            'roboelectric'      : '3.6.1',
             'sourceCompat'     : JavaVersion.VERSION_1_8,
             'targetCompat'     : JavaVersion.VERSION_1_8
     ]
 
+
     ext.deps = [
-            android   : [
+            android  : [
                     'gradlePlugin'   : "com.android.tools.build:gradle:${versions.androidPlugin}",
                     'lifecycleExt'   : "android.arch.lifecycle:extensions:${versions.archComp}",
                     'lifecycleCommon': "android.arch.lifecycle:common-java8:${versions.archComp}",
-                    'roomRuntime': "android.arch.persistence.room:runtime:${versions.room}",
-                    'roomCompiler': "android.arch.persistence.room:compiler:${versions.room}",
-                    'roomRx': "android.arch.persistence.room:rxjava2:${versions.roomRx}",
+                    'roomRuntime'    : "android.arch.persistence.room:runtime:${versions.room}",
+                    'roomCompiler'   : "android.arch.persistence.room:compiler:${versions.room}",
+                    'roomRx'         : "android.arch.persistence.room:rxjava2:${versions.roomRx}",
             ],
-            support   : [
-                    'appCompat'   : "com.android.support:appcompat-v7:${versions.buildTools}",
-                    'recyclerView': "com.android.support:recyclerview-v7:${versions.buildTools}",
-                    'cardView': "com.android.support:cardview-v7:${versions.buildTools}",
-                    'support'     : "com.android.support:support-v4:${versions.buildTools}",
-                    'designSupport'     : "com.android.support:design:${versions.buildTools}",
+            support  : [
+                    'appCompat'    : "com.android.support:appcompat-v7:${versions.buildTools}",
+                    'recyclerView' : "com.android.support:recyclerview-v7:${versions.buildTools}",
+                    'cardView'     : "com.android.support:cardview-v7:${versions.buildTools}",
+                    'support'      : "com.android.support:support-v4:${versions.buildTools}",
+                    'designSupport': "com.android.support:design:${versions.buildTools}",
             ],
-            kotlin    : [
+            kotlin   : [
                     'gradlePlugin': "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}",
                     'stdlib'      : "org.jetbrains.kotlin:kotlin-stdlib-jre7:${versions.kotlin}",
             ],
-            reactivex : [
+            reactivex: [
                     'rxJava'   : "io.reactivex.rxjava2:rxjava:${versions.rxJava}",
                     'rxAndroid': "io.reactivex.rxjava2:rxandroid:${versions.rxAndroid}"
             ],
-            google    : [
+            google   : [
                     'gmsPlugin'      : "com.google.gms:google-services:${versions.gms}",
                     'dagger'         : "com.google.dagger:dagger:${versions.dagger}",
                     'daggerProcessor': "com.google.dagger:dagger-compiler:${versions.dagger}",
             ],
-            square    : [
+            square   : [
                     'retrofit'         : "com.squareup.retrofit2:retrofit:${versions.retrofit}",
                     'gsonConverter'    : "com.squareup.retrofit2:converter-gson:${versions.retrofit}",
                     'okhttp'           : "com.squareup.okhttp3:okhttp:${versions.okhttp}",
@@ -65,17 +67,18 @@ buildscript {
                     'okhttpDownloader' : "com.jakewharton.picasso:picasso2-okhttp3-downloader:${versions.okhttpDownloader}",
                     'retrofitRxAdapter': "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:${versions.retrofitRxAdapter}",
             ],
-            facebook  : [
+            facebook : [
                     'stetho'            : "com.facebook.stetho:stetho:${versions.stetho}",
                     'networkInterceptor': "com.facebook.stetho:stetho-okhttp3:${versions.stetho}"
             ],
-            test      : [
-                    'junit'       : "junit:junit:${versions.junit}",
-                    'testRunner'  : "com.android.support.test:runner:${versions.testRunner}",
-                    'espressoCore': "com.android.support.test.espresso:espresso-core:${versions.espressoCore}"
+            test     : [
+                    'junit'      : "junit:junit:${versions.junit}",
+                    'atslRunner' : "com.android.support.test:runner:${versions.atsl}",
+                    'atslRules'  : "com.android.support.test:rules:${versions.atsl}",
+                    'mockitoKotlin':"com.nhaarman:mockito-kotlin:${versions.mockitoKotlin}",
+                    'roboelectric':"org.robolectric:robolectric:${versions.roboelectric}"
             ]
     ]
-
     repositories {
         google()
         jcenter()
