--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,4 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-org.gradle.jvmargs=-XX\:MaxHeapSize\=256m -Xmx256m
+org.gradle.jvmargs=-Xmx1024m
