Adding Article Link. Fixes #17

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -71,6 +71,6 @@ dependencies {
 
     api deps.additional.jodaTime
 
-    implementation deps.facebook.stetho
-    implementation deps.facebook.networkInterceptor
+    api deps.facebook.stetho
+    api deps.facebook.networkInterceptor
 }
