--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,12 @@
 buildscript {
     ext.versions = [
             'minSdk'           : 16,
-            'compileSdk'       : 27,
-            'supportVer'       : '27.1.1',
+            'compileSdk'       : 28,
+            'supportVer'       : '28.0.0',
 
-            'buildTools'       : '27.0.3',
-            'androidPlugin'    : '3.1.3',
-            'kotlin'           : '1.2.20',
+            'buildTools'       : '28.0.3',
+            'androidPlugin'    : '3.2.1',
+            'kotlin'           : '1.3.11',
             'archComp'         : '1.1.0',
             'livedataTesting'  : '1.1.0',
             'room'             : '1.0.0',
@@ -53,7 +53,8 @@ buildscript {
             ],
             kotlin    : [
                     'gradlePlugin': "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}",
-                    'stdlib'      : "org.jetbrains.kotlin:kotlin-stdlib-jre7:${versions.kotlin}",
+                    'stdlib7'      : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}",
+                    'stdlib8'      : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}",
             ],
             reactivex : [
                     'rxJava'   : "io.reactivex.rxjava2:rxjava:${versions.rxJava}",
