--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,10 @@ buildscript {
     ext.versions = [
             'minSdk'           : 16,
             'compileSdk'       : 28,
-            'supportVer'       : '28.0.0',
 
             'buildTools'       : '28.0.3',
             'androidPlugin'    : '3.2.1',
             'kotlin'           : '1.3.11',
-            'archComp'         : '1.1.0',
-            'livedataTesting'  : '1.1.0',
-            'room'             : '1.0.0',
-            'roomRx'           : '1.0.0',
-            'roomTesting'      : '1.0.0',
             'gms'              : '3.1.0',
             'dagger'           : '2.12',
             'gson'             : '2.8.0',
@@ -38,23 +32,22 @@ buildscript {
     ext.deps = [
             android   : [
                     'gradlePlugin'   : "com.android.tools.build:gradle:${versions.androidPlugin}",
-                    'lifecycleExt'   : "android.arch.lifecycle:extensions:${versions.archComp}",
-                    'lifecycleCommon': "android.arch.lifecycle:common-java8:${versions.archComp}",
-                    'roomRuntime'    : "android.arch.persistence.room:runtime:${versions.room}",
-                    'roomCompiler'   : "android.arch.persistence.room:compiler:${versions.room}",
-                    'roomRx'         : "android.arch.persistence.room:rxjava2:${versions.roomRx}",
+                    'lifecycleExt'   : 'androidx.lifecycle:lifecycle-extensions:2.0.0',
+                    'lifecycleCommon': 'androidx.lifecycle:lifecycle-common-java8:2.0.0',
+                    'roomRuntime'    : 'androidx.room:room-runtime:2.0.0',
+                    'roomCompiler'   : 'androidx.room:room-compiler:2.0.0',
+                    'roomRx'         : 'androidx.room:room-rxjava2:2.0.0',
             ],
             support   : [
-                    'appCompat'    : "com.android.support:appcompat-v7:${versions.supportVer}",
-                    'recyclerView' : "com.android.support:recyclerview-v7:${versions.supportVer}",
-                    'cardView'     : "com.android.support:cardview-v7:${versions.supportVer}",
-                    'support'      : "com.android.support:support-v4:${versions.supportVer}",
-                    'designSupport': "com.android.support:design:${versions.supportVer}",
+                    'appCompat'    : 'androidx.appcompat:appcompat:1.0.0',
+                    'recyclerView' : 'androidx.recyclerview:recyclerview:1.0.0',
+                    'cardView'     : 'androidx.cardview:cardview:1.0.0',
+                    'support'      : 'androidx.legacy:legacy-support-v4:1.0.0',
+                    'designSupport': 'com.google.android.material:material:1.0.0',
             ],
             kotlin    : [
                     'gradlePlugin': "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}",
                     'stdlib7'      : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}",
-                    'stdlib8'      : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}",
             ],
             reactivex : [
                     'rxJava'   : "io.reactivex.rxjava2:rxjava:${versions.rxJava}",
@@ -83,13 +76,13 @@ buildscript {
             ],
             test      : [
                     'junit'          : "junit:junit:${versions.junit}",
-                    'atslRunner'     : "com.android.support.test:runner:${versions.atsl}",
-                    'atslRules'      : "com.android.support.test:rules:${versions.atsl}",
+                    'atslRunner'     : 'androidx.test.ext:junit:1.1.0',
+                    'atslRules'      : 'androidx.test:rules:1.1.0',
                     'mockitoKotlin'  : "com.nhaarman:mockito-kotlin:${versions.mockitoKotlin}",
                     'robolectric'    : "org.robolectric:robolectric:${versions.robolectric}",
                     'mockWebServer'  : "com.squareup.okhttp3:mockwebserver:${versions.okhttp}",
-                    'roomTesting'    : "android.arch.persistence.room:testing:${versions.roomTesting}",
-                    'livedataTesting': "android.arch.core:core-testing:${versions.livedataTesting}",
+                    'roomTesting'    : 'androidx.room:room-testing:2.0.0',
+                    'livedataTesting': 'androidx.arch.core:core-testing:2.0.0',
             ]
     ]
     repositories {
