--- a/posts/build.gradle
+++ b/posts/build.gradle
@@ -13,7 +13,7 @@ android {
         targetSdkVersion versions.compileSdk
         versionCode 3
         versionName "1.2"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
